--- a/contact.html
+++ b/contact.html
@@ -4,14 +4,14 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Contact</title>
-    <link rel="stylesheet" href="contact/assets/contact.css" />
+    <link rel="stylesheet" href="assets/contact.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
   </head>
   <body>
     <header>
       <nav class="navbar navbar-expand-lg navbar-light gradient-bg">
         <div class="container-fluid">
-          <a class="navbar-brand fw-bold" href="#"> <img src="assets/img/logo1.png" alt="" width="35" />Kelompok 6 </a>
+          <a class="navbar-brand fw-bold" href="#"> <img src="index/assets/img/logo1.png" alt="" width="35" />Kelompok 6 </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
